# llm-evaluation

./: .deepeval-cache.json  .gitignore  README.md  pyproject.toml
dataset/: 12b38358-64b7-4360-b89e-d253f4661a82.json  20240415_114301.json  5dc2197f-bb11-4e87-81d2-64dc317b6ced.json  c0d8e70d-fcf8-460a-8bb0-33c6809a5936.json  eval_result.py
dataset/mqc/: 3aaff2bf-7458-4eab-bf93-7d537fae0a76.json  c0d8e70d-fcf8-460a-8bb0-33c6809a5936.json
dataset/qa/: 039a52c2-a0f9-44cf-88e0-7a7154e7224c.json  057683e9-e4da-4c46-86dc-7551be7ba20a.json  1334354c-d904-4f03-b0d1-52966505832a.json  1ebeb771-94bc-4158-bd25-55a2493bf725.json  3570a911-369a-4104-bdf4-4c3b55435cb6.json  3aaff2bf-7458-4eab-bf93-7d537fae0a76.json  740538a8-92be-45f1-b700-97464c431276.json  85d9b066-cf33-45fd-9675-0d47afd1b73a.json  ab528b83-46c3-4805-ba55-7a18cda53ec4.json  abe34539-6fc1-42ba-bc19-d5d1dc039e61.json  c0d8e70d-fcf8-460a-8bb0-33c6809a5936.json
files/faiss_index/: index.faiss  index.pkl
llm_evaluator/: __init__.py  __main__.py  launch.json
llm_evaluator/api/: __main__.py
llm_evaluator/backend/: __main__.py
llm_evaluator/cli/: evaluate.py  synthesize.py
llm_evaluator/configs/: backend.json  model_eval.json  mqc_synthesize.json  qa_eval.json  rag_eval.json  synthesize.json
llm_evaluator/core/: enums.py  evaluator.py  synthesizer.py  visual.py
llm_evaluator/templates/: syn_temp.py  synthesize.py
llm_evaluator/utils/: dataset.py  fileio.py  secrets.py
test/: dataset_generator.py  test_context_retrieve.py  test_env.py  test_judge.py  test_request.py  test_rich.py  view_golden.py
(+20 files in other folders)
