[tool.poetry]
name = "llm_evaluator"
version = "1.0.0"
description = "LLM-Evaluator: Fast synthesis dataset creation and LLM pipeline evaluation. Accelerate testing and performance assessment with ease."
authors = ["Linh Phung"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pydantic = "^2.7.0"
typer = "^0.12.3"
deepeval = "^0.21.36"
loguru = "^0.7.2"
fs-gcsfs = "^1.5.1"
pandas = "^2.2.2"
pymongo = "^4.6.3"
markdownify = "^0.12.1"
evaluate = "^0.4.1"
gunicorn = "^22.0.0"
fastapi = "^0.110.3"
uvicorn = "^0.29.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
llm-eval = "llm_evaluator.__main__:app"